<resources>
    <string name="app_name">RMEET_dating_app</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="login">Login</string>
</resources>